# IOTDI2021-Appendix

./: .gitignore  Makefile  README.md  setup.cfg  setup.py
app/: README.md  test_sort_main.py  yolo_sort.py
app/video/: testCV.py
data-generator/: Dockerfile  README.md  app.py
deployment/: Makefile  docker-compose.yml
deployment/geth/: README.md  example.yaml  geth.yaml
deployment/shared/: custom_object_function.py
docker-pulsar-standalone/: README.md  app.sh
docker/geth/: Dockerfile  docker-compose.yml
dump/: cli-version.txt  reverse_request.txt
gke-pulsar-deploy/: README.md
notebooks/: customer_experiment.ipynb  experiments.ipynb  mediatorresults.ipynb  pulsar_sql.ipynb
print-consumer/: app.py
sandbox/docker-pulsar-standalone/: app.sh  setup_test.py
sandbox/docker-siblings/: Dockerfile  README.md  build.sh
sandbox/dump/: README.md  python-version.txt
sandbox/print-consumer/: README.md  app.py
sandbox/pulsar-function/: Makefile
smartContract/: ModicumV2.sol
smartContractInterface/: PlatformClient.py  helper.py
smartContractInterface/Contract/: Enums.py  ModicumV2Contract.py
src/: Allocator.Dockerfile  Customer.Dockerfile  Dockerfile  README.md  Supplier.Dockerfile  Verifier.Dockerfile  docker-compose.yml  requirements.txt
src/MV2/: PulsarREST.py  __init__.py  allocator.py  bug-report.txt  cfg.py  customer.py  game.py  mediator.py  queries.py  schema.py  supplier.py  test.py  verifier.py  verifier_void.py  video_sink.py  video_source.py
src/tests/: customer_test.py  presto.md  readme.md  runtimetest.py  (+5 more)
void_docs/: README.md
(+21 files in other folders)
