[metadata]
name = MV2
version = version number: 0.0.0
license = MIT
description = A framework for building and testing micro-markets
long_description = file: README.md
author = Scott Eisele
author_email = scott.r.eisele@vanderbilt.edu
classifiers=
    Operating System :: Ubuntu 20.04
    Programming Language :: Python :: 3



[options]
packages = find:
package_dir =
    =src

include_package_data = True
install_requires =
    requests
    pulsar-client
    requests-toolbelt

[options.packages.find]
where=src